--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,17 @@
 	"editor.detectIndentation": false,
 	"editor.tabSize": 4,
 	"files.associations": {
-		"pointers": "cpp"
+		"pointers": "cpp",
+		"multi_span": "cpp",
+		"span": "cpp",
+		"array": "cpp",
+		"deque": "cpp",
+		"forward_list": "cpp",
+		"list": "cpp",
+		"unordered_map": "cpp",
+		"unordered_set": "cpp",
+		"vector": "cpp",
+		"string_view": "cpp",
+		"gsl_util": "cpp"
 	}
 }
