--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,11 @@ environment:
    - BUILD_VERSION: disable_register_custom_scheme
    - BUILD_VERSION: disable_crash_reports
    - BUILD_VERSION: disable_network_proxy
+   
+install:
+  - ps: iex ((New-Object Net.WebClient).DownloadString('https://raw.githubusercontent.com/appveyor/secure-file/master/install.ps1'))
+  - cmd: appveyor-tools\secure-file -decrypt TelegramPrivate\custom_api_id.h.enc -secret %api_key_secret%
+  - sh: ./appveyor-tools/secure-file -decrypt TelegramPrivate\custom_api_id.h.enc -secret $api_key_secret
 
 matrix:
   fast_finish: true
@@ -22,6 +27,6 @@ build:
 
 artifacts:
   - path: out\Debug\Telegram.exe
-    name: Telegram_debug.exe
+    name: BettergramKang_debug.exe
   - path: out\Debug\Telegram.exe.pdb
-    name: Telegram_debug.exe.pdb
+    name: BettergramKang_debug.exe.pdb
